<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/topLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_260sdp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_d6d6d6">

                        <include
                            android:id="@+id/select_from_to_view"
                            layout="@layout/select_from_to_location_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_40sdp"
                            android:layout_marginEnd="@dimen/_20sdp" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/innerView_back_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@drawable/ic_back_arrow_toolbar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_32sdp"
                        android:orientation="vertical">

                        <com.road.star.utils.Road_Lable
                            style="@style/regular_black_14_text"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/courier_details"
                            android:textColor="@color/colorblack" />

                        <com.road.star.utils.Road_Lable
                            style="@style/regular_black_14_text"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/product_category"
                            android:textColor="@color/menu_text_color" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/spinner"
                            style="@style/spinner_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-8dp"
                            android:paddingStart="@dimen/dp_0"
                            android:spinnerMode="dialog" />

                        <!---->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:orientation="vertical">

                            <com.road.star.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:text="@string/product_type"
                                android:textColor="@color/menu_text_color" />

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/product_type_spinner"
                                style="@style/spinner_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-8dp"
                                android:paddingStart="@dimen/dp_0"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20"
                            android:orientation="vertical">

                            <com.road.star.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:text="@string/description"
                                android:textColor="@color/menu_text_color" />

                            <EditText
                                style="@style/edit_text_normal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:gravity="top|left"
                                android:background="@android:drawable/editbox_background_normal"
                                android:minHeight="@dimen/_100sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20"
                            android:orientation="vertical">

                            <com.road.star.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:text="@string/product_weight"
                                android:textColor="@color/menu_text_color" />

                            <EditText style="@style/edittext_style" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp">

                            <com.road.star.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_centerVertical="true"
                                android:text="@string/attach_photo"
                                android:textColor="@color/menu_text_color" />


                            <ImageView
                                android:id="@+id/attach_iv"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/_16sdp"
                                android:src="@drawable/attach" />


                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20"
                            android:orientation="vertical">


                            <com.road.star.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:text="@string/instruction"
                                android:textColor="@color/menu_text_color" />


                            <include
                                layout="@layout/instruction_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_10"
                                app:title="@{@string/lorem_ipsum}" />


                            <include
                                android:id="@+id/next_btn"
                                layout="@layout/action_red_gradient_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_20"
                                android:layout_marginBottom="@dimen/_20sdp"
                                app:title="@{@string/next}" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vehicleToolbarCardView"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/product_detail"
                android:translationY="@dimen/_5sdp"
                app:layout_anchor="@id/topLayout"
                app:layout_anchorGravity="bottom|center" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>
</layout>